--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                     <h1>Dušan Milojković</h1>
                     <h2>Junior WEB/Frontend<br>& Software Developer</h2>
                     <div class="social group">
-                        <a href="#" class="facebook">Facebook</a>
-                        <a href="#" class="googleplus">Google+</a>
-                        <a href="#" class="skype">Skype</a>
-                        <a href="#" class="github">GitHUB</a>
+                        <a href="https://www.facebook.com/d00mil" class="facebook">Facebook</a>
+                        <a href="https://plus.google.com/u/0/+Du%C5%A1anMilojkovi%C4%8776" class="googleplus">Google+</a>
+                        <a href="skype:dmilojkovic76?chat&topic=Poziv%20sa%20mog%20sajta" class="skype">Skype</a>
+                        <a href="https://github.com/dmilojkovic76" class="github">GitHUB</a>
                     </div>
                 </div>
                 <nav class="menus">
@@ -68,6 +68,22 @@
                     </ul>
                 </nav>
             </aside>
+            <!-- Moje ime i osnovni podaci -->
+            <div class="zaglavlje">
+                <div class="main-info">
+                    <h1>Dušan</h1>
+                    <h1 style="color: #d35136">Milojković</h1>
+                    <h2>Junior WEB/Frontend<br>& Software Developer</h2>
+                </div>
+                <div class="social-info">
+                    <ul>
+                        <li><a href="https://www.facebook.com/d00mil" class="facebook">Facebook</a></li>
+                        <li><a href="https://plus.google.com/u/0/+Du%C5%A1anMilojkovi%C4%8776" class="googleplus">Google+</a></li>
+                        <li><a href="skype:dmilojkovic76?chat&topic=Poziv%20sa%20mog%20sajta" class="skype">Skype</a></li>
+                        <li><a href="https://github.com/dmilojkovic76" class="github">GitHUB</a></li>
+                    </ul>
+                </div>
+            </div>
             <!-- odavde je glavni sadrzaj strane -->
             <div class="content">
                 <article class="portfolio-item group first">
@@ -133,14 +149,14 @@
         <!-- Moj glavni JS kod -->
         <script src="js/app.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <!-- Google Analytics -->
         <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+            ga('create', 'UA-96576339-1', 'auto');
+            ga('send', 'pageview');
         </script>
     </body>
 </html>
